--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -4,3 +4,127 @@
   --black: #1B1A33;
   --white: #FFFFFF;
 }
+
+
+.container__supplier{
+  width: 100%;
+  max-width: 00px;
+  padding: 20px;
+}
+
+#supplier__form {
+  width: 350px;
+  height: 100%;
+  position: relative;
+  background: var(--white);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid var(--primary);
+  padding-top: 0%;
+  padding: 20px;
+  position: relative;
+}
+
+.background {
+  position: absolute;
+  width: 109%;
+  height: 74%;
+  transform: rotate(-44deg);
+  transform-origin: 5 0;
+  background: rgba(119, 114, 230, 0.45);
+  border-radius: 25px;
+  left: -220px;
+  top: 80px;
+}
+
+
+
+
+#supplier__form label {
+  display: none;
+}
+
+#supplier__form .mb-3 {
+  width: 90%;
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+  border: 1px solid var(--secondary);
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+#supplier__form .form-control {
+  padding: 5px 16px;
+  border: none;
+  outline: none;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 16px;
+  opacity: 0.8; 
+  color: var(--secondary);
+}
+
+#supplier__form .btn {
+  width: 50%;
+  padding-top: 8px; 
+  padding-bottom: 8px; 
+  padding-left: 33px; 
+  padding-right: 33px;
+  color: var(--white);
+  margin-top: 20px;
+  background: var(--primary);
+  border: 1px solid;
+  border-radius: 10px;
+  font-size: 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+/* #supplier__form .btn:hover {
+  background: var(--primary);
+  color: var(--white);
+} */
+
+
+.row{
+  display: flex;
+  width: 90%;
+  justify-content: space-between; 
+}
+
+
+/* titulo */
+#supplier_signUp{
+  color: #1B1A33;
+  font-size: 32px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: 700;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: 32px;
+  margin-top: 0px; 
+  margin-bottom: 0%;
+  text-align: center;
+}
+
+
+/* nombre */
+#name__supplier{
+  flex:calc(20%); 
+  margin-bottom: 3px; 
+  margin-right: 10px;
+}
+
+
+/* apellido */
+#last__name__supplier{
+  flex: calc(20%); 
+  margin-bottom: 3px; 
+}
+
+
+
+
+
