--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -7,39 +7,38 @@
 
 
 .container__supplier{
-  width: 100%;
-  max-width: 00px;
-  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #supplier__form {
   width: 350px;
   height: 100%;
   position: relative;
+  top: initial;
   background: var(--white);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 10px rgba(120, 114, 230, 0.25);
   border-radius: 10px;
   overflow: hidden;
-  border: 2px solid var(--primary);
+  border: 2px;
   padding-top: 0%;
-  padding: 20px;
-  position: relative;
+  padding-left: 30px;
+  padding-bottom: 20px;
 }
 
 .background {
   position: absolute;
-  width: 109%;
+  width: 100%;
   height: 74%;
-  transform: rotate(-44deg);
+  transform: rotate(42deg);
   transform-origin: 5 0;
   background: rgba(119, 114, 230, 0.45);
   border-radius: 25px;
-  left: -220px;
-  top: 80px;
+  left: -190px;
+  top: 72px;
 }
-
-
-
 
 #supplier__form label {
   display: none;
@@ -47,10 +46,8 @@
 
 #supplier__form .mb-3 {
   width: 90%;
-  position: relative;
-  border-radius: 5px;
+  /* position: relative; */
   overflow: hidden;
-  border: 1px solid var(--secondary);
   display: flex;
   flex-direction: column;
   margin-top: 20px;
@@ -58,20 +55,25 @@
 
 #supplier__form .form-control {
   padding: 5px 16px;
-  border: none;
+  border-radius: 5px;
+  border: 1px solid var(--secondary);
   outline: none;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 16px;
   opacity: 0.8; 
-  color: var(--secondary);
+  /* transition: border-color 0.5s; */
+}
+
+#supplier__form .form-control:focus {
+  border: 1px solid var(--black);
 }
 
 #supplier__form .btn {
-  width: 50%;
+  width: 40%;
   padding-top: 8px; 
   padding-bottom: 8px; 
-  padding-left: 33px; 
-  padding-right: 33px;
+  padding-left: 20px; 
+  padding-right: 20px;
   color: var(--white);
   margin-top: 20px;
   background: var(--primary);
@@ -81,32 +83,26 @@
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-/* #supplier__form .btn:hover {
-  background: var(--primary);
-  color: var(--white);
-} */
-
+#supplier__form .btn:hover {
+  border-color: var(--primary);
+}
 
 .row{
+  margin-top:0px;
   display: flex;
   width: 90%;
-  justify-content: space-between; 
+  /* justify-content: space-between;  */
 }
 
 
 /* titulo */
-#supplier_signUp{
-  color: #1B1A33;
+#supplier__signUp{
+  color: var(--black);
   font-size: 32px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: 700;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  font-size: 32px;
-  margin-top: 0px; 
-  margin-bottom: 0%;
   text-align: center;
+  margin-bottom: 3%;
 }
 
 
