--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -4,3 +4,87 @@
   --black: #1B1A33;
   --white: #FFFFFF;
 }
+
+/* sign up container */
+.sign-up {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100dvh;
+}
+
+.sign-up__container {
+  position: relative;
+  width: 50%;
+  margin: 0 auto;
+  padding: 1.5rem;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px var(--primary);
+  overflow: hidden;
+}
+
+/* square */
+.square {
+  position: absolute;
+  width: 70dvh;
+  height: 70dvh;
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background-color: rgba(120, 114, 230, 0.3);
+  border-radius: 35px;
+  filter: blur(10px);
+}
+
+/* sign up form */
+.sign-up__container h2 {
+  text-align: center;
+}
+
+.sign-up__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign-up__form__input {
+  position: relative;
+  margin: 0.5rem 0;
+}
+
+/* .sign-up__form__input span {
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+  color: var(--secondary);
+} */
+
+.sign-up__form__input input {
+  padding: 0.5rem;
+  background-color: transparent;
+  border: 1px solid var(--secondary);
+  border-radius: 10px;
+  outline: none;
+}
+
+.sign-up__form__input input:focus {
+  border: 2px solid var(--black);
+}
+
+.sign-up__form button {
+  margin: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--primary);
+  border-radius: 10px;
+  border: none;
+  color: var(--white);
+  cursor: pointer;
+}
+
+.sign-up__form button:hover {
+  background-color: var(--black);
+  box-shadow: 0 5px 
+  15px var(--primary);
+}
