--- a/views/modules/sign-up-form.html
+++ b/views/modules/sign-up-form.html
@@ -15,35 +15,42 @@
   
       <div class="square"></div>
   
-      <form class="sign-up__form">
-        <label for="user-name" class="sign-up__form__input">
+      <form class="sign-up__form" id="customerForm">
+        <label for="customer-name" class="sign-up__form__input">
           <!-- <span>Nombre:</span> -->
-          <input id="user-name" type="text" placeholder="Nombre:" required>
+          <input id="customer-name" type="text" name="customer-name" placeholder="Nombre:" onkeyup="validateInputData('customer-name')">
+          <!-- mensaje de error -->
+          <span class="inactive">Ingrese un valor valido.</span>
         </label>
-  
-        <label for="user-last-name" class="sign-up__form__input">
+        
+        <label for="customer-last-name" class="sign-up__form__input">
           <!-- <span>Last name:</span> -->
-          <input id="user-last-name" type="text" placeholder="Last name:" required>
+          <input id="customer-last-name" type="text" name="customer-last-name" placeholder="Last name:" onkeyup="validateInputData('customer-last-name')">
+          <span class="inactive">Ingrese un valor valido.</span>
         </label>
-  
-        <label for="user-phone" class="sign-up__form__input">
+        
+        <label for="customer-phone" class="sign-up__form__input">
           <!-- <span>Telefono:</span>  -->
-          <input id="user-phone" type="number" placeholder="Telefono:" required>
+          <input id="customer-phone" type="number" name="customer-phone" placeholder="Telefono:" onkeyup="validateInputData('customer-phone')">
+          <span class="inactive">Ingrese un valor valido.</span>
         </label>
-  
-        <label for="user-email" class="sign-up__form__input">
+        
+        <label for="customer-email" class="sign-up__form__input">
           <!-- <span>Email:</span>  -->
-          <input id="user-email" type="email" placeholder="Email:" required>
+          <input id="customer-email" type="email" name="customer-email" placeholder="Email:" onkeyup="validateInputData('customer-email')">
+          <span class="inactive">Ingrese un valor valido.</span>
         </label>
-  
-        <label for="user-pass" class="sign-up__form__input">
+        
+        <label for="customer-pass" class="sign-up__form__input">
           <!-- <span>Password:</span> -->
-          <input id="user-pass" type="password" placeholder="Password:" required>
+          <input id="customer-pass" type="password" name="customer-pass" placeholder="Password:" onkeyup="validateInputData('customer-pass')">
+          <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
-        <button type="button">Registrase</button>
+        <button type="button" id="customerFormButton">Registrase</button>
       </form>
     </div>
   </section>
+  <script src="../assets/js/main.js"></script>
 </body>
 </html>
