--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -1,10 +1,112 @@
-:root{
+:root {
   --primary: #7772E6;
   --secondary: #737380;
   --black: #1B1A33;
   --white: #FFFFFF;
 }
 
-html {
-  font-family: 'Poppins', sans-serif;
+.tittle-welcome{
+  color: var(--primary);
+}
+/* sign up container */
+.log-in {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100dvh;
+}
+
+.log-in__container {
+  position: relative;
+  width: 30%;
+  margin: 0 auto;
+  padding: 1.5rem;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px var(--primary);
+  overflow: hidden;
+}
+
+/* square */
+.square {
+  position: absolute;
+  width: 35dvh;
+  height: 35dvh;
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background-color: rgba(120, 114, 230, 0.3);
+  border-radius: 35px;
+  filter: blur(10px);
+  z-index: -100;
+}
+
+/* log in  form */
+.log-in__container h2 {
+  text-align: center;
+}
+
+.log-in__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.log-in__form__input {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem 0;
+}
+
+.log-in__form__input input {
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+  background-color: transparent;
+  border: 1px solid var(--secondary);
+  border-radius: 10px;
+  outline: none;
+}
+
+.log-in__form__input span {
+  color: red;
+}
+
+.log-in__form__input input:focus {
+  border: 2px solid var(--black);
+}
+
+.log-in__form button {
+  margin: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--primary);
+  border-radius: 10px;
+  border: none;
+  color: var(--white);
+  cursor: pointer;
+}
+
+.log-in__form button:hover {
+  background-color: var(--black);
+  box-shadow: 0 5px 15px var(--primary);
+}
+
+/* validacion de input */
+.is-invalid {
+  border: 2px dashed red !important;
+}
+
+input:invalid {
+  border: 2px dashed red;
+}
+
+input:invalid:focus {
+  border: 2px dashed red;
+}
+
+input:valid {
+  border: 2px solid black;
+}
+
+.inactive {
+  display: none;
 }
