--- a/views/modules/header.html
+++ b/views/modules/header.html
@@ -14,23 +14,25 @@
 
 
     <nav class="navBar">
-        <!--
-        <ul class="navBarUl">
-            <li class="navBarLi"><a href="index.php">Inicio</a></li>
-            <li class="navBarLi"><a href="index.php">Inicio</a></li>
-        </ul> -->
         <div class="navBarSearch">
             <input type="text" name="search" id="search" placeholder="Buscar">
+            <button></button>
         </div>
     </nav>
 
 
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, libero voluptatem ducimus voluptatibus qui quos fugit voluptate perferendis aperiam neque unde quasi. Commodi est provident fugit aut placeat sit necessitatibus.</p>
+
+
+
+    <section>
+    </section>
 
 
 
 
 
-
+    
 
 </body>
 
