--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -56,6 +56,7 @@ html {
 .sign-up__form__input {
   display: flex;
   flex-direction: column;
+  width: 75%;
   margin: 0.5rem 0;
 }
 
@@ -67,13 +68,38 @@ html {
   color: var(--secondary);
 } */
 
-.sign-up__form__input input {
+input {
   margin-bottom: 0.5rem;
   padding: 0.5rem;
   background-color: transparent;
   border: 1px solid var(--secondary);
   border-radius: 10px;
   outline: none;
+}
+
+.sign-up__form__input input[type="file"] {
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: transparent;
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+.sign-up__form__input input::file-selector-button {
+  border: none;
+  border-radius: 15px;
+  background-color: var(--primary);
+  padding: 0.5rem 1rem;
+  color: var(--white);
+  cursor: pointer;
+}
+
+.sign-up__form__input input::file-selector-button:hover {
+  background-color: var(--black);
+  box-shadow: 0 5px 15px var(--primary);
 }
 
 .sign-up__form__input span {
@@ -101,7 +127,7 @@ html {
 
 /* validacion de input */
 .is-invalid {
-  border: 2px dashed red !important;
+  border: 2px dashed red;
 }
 
 input:invalid {
@@ -110,10 +136,6 @@ input:invalid {
 
 input:invalid:focus {
   border: 2px dashed red;
-}
-
-input:valid {
-  border: 2px solid black;
 }
 
 .inactive {
