--- a/views/modules/sign-up-form.html
+++ b/views/modules/sign-up-form.html
@@ -73,7 +73,7 @@
 
         <!-- img -->
         <label for="customer-img" class="sign-up__form__input">
-          <!-- <span>Imagen:</span> -->
+          Foto de perfil:
           <input id="customer-img" type="file" name="customer-img" placeholder="Imagen"
             onchange="validateInputData('customer-img')" accept="image/*">
           <span class="inactive">Seleccione un tipo de archivo correcto.</span>
