--- a/views/modules/supplier.registration.html
+++ b/views/modules/supplier.registration.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/style-supplier.css">
+    <script src="../assets/js/form.js"></script>
+    
 </head>
 <body>
 
 <section class="container__supplier">
     
-    <form id="supplier__form" class="was-validated">
+    <form id="supplier__form" class="Sign_up_supplier" action="">
 
         <div class="background"></div>
 
@@ -19,51 +21,60 @@
 
         <div class="row">
 
-            <div class="mb-3 mt-3"  id="name__supplier" >
-                <label for="name__supplier" class="form-label"></label>
-                <input type="text" class="form-control" id="name__supplier--input" placeholder="Nombre" name="" required>
+            <div class="inputs-form mt-3"  id="name__supplier" >
+                <label for="" class="form-label"></label>
+                <input type="text" class="form-control" id="name__supplier--input" placeholder="Nombre" name="name__supplier--input" >
+                <!-- <span class="inactive">Ingrese un valor valido.</span>   -->
             </div>
           
-            <div class="mb-3 mt-3" id="last__name__supplier" >
-                <label for="last__name__supplier" class="form-label"></label>
-                <input type="text" class="form-control" id="last__name__supplier--input" placeholder="Apellido" name="" required>
+            <div class="inputs-form mt-3" id="last__name__supplier" >
+                <label for="" class="form-label"></label>
+                <input type="text" class="form-control" id="last__name__supplier--input" placeholder="Apellido" name="last__name__supplier--input" >
+                <!-- <span class="inactive">Ingrese un valor valido.</span> -->
             </div>
         </div>
         
 
-        <div class="mb-3">
-          <label for="pwd" class="form-label"></label>
-          <input type="email" class="form-control" id="email__supplier" placeholder="Email" name="" required> 
+        <div class="inputs-form">
+          <label for="" class="form-label"></label>
+          <input type="email" class="form-control" id="email__supplier" placeholder="Email" name="email__supplier" > 
+          <!-- <span class="inactive">Ingrese un valor valido.</span> -->
         </div>
 
-        <div class="mb-3">
-            <label for="pwd" class="form-label"></label>
-            <input type="number" class="form-control" id="phone__supplier" placeholder="Teléfono" name="" required>
+        <div class="inputs-form">
+            <label for="" class="form-label"></label>
+            <input type="number" class="form-control" id="phone__supplier" placeholder="Teléfono" name="phone__supplier">
+            <!-- <span class="inactive">Ingrese un valor valido.</span> -->
           </div>
 
-          <div class="mb-3">
-            <label for="text" class="form-label"></label>
-            <input type="text" class="form-control" id="name__company--supplier" placeholder="Nombre de Empresa" name="" required>
+          <div class="inputs-form">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-control" id="name__company--supplier" placeholder="Nombre de Empresa" name="name__company--supplier">
+            <!-- <span class="inactive">Ingrese un valor valido.</span> -->
           </div>
 
-          <div class="mb-3">
-            <label for="text" class="form-label"></label>
-            <input type="text" class="form-control" id="rut__supplier" placeholder="RUT" name="" required>
+          <div class="inputs-form">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-control" id="rut__supplier" placeholder="RUT" name="rut__supplier">
+            <!-- <span class="inactive">Ingrese un valor valido.</span> -->
           </div>
 
-          <div class="mb-3">
-            <label for="city__supplie" class="form-label"></label>
-            <input type="text" class="form-control" id="city__supplier" placeholder="Ciudad" name="" required>
+          <div class="inputs-form">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-control" id="city__supplier" placeholder="Ciudad" name="city__supplier">
+            <!-- <span class="inactive">Ingrese un valor valido.</span> -->
           </div>
 
-          <div class="mb-3">
-            <label for="text" class="form-label"></label>
-            <input type="text" class="form-control" id="country__supplier" placeholder="País" name="" required>
+          <div class="inputs-form">
+            <label for="" class="form-label"></label>
+            <input type="text" class="form-control" id="country__supplier" placeholder="País" name="country__supplier">
+            <!-- <span class="inactive">Ingrese un valor valido.</span> -->
           </div>
 
-          <div class="mb-3">
-            <label for="text" class="form-label"></label>
-            <input type="password" class="form-control" id="pwd_supplier" placeholder="Password" name="" required>
+          <div class="inputs-form">
+            <label for="" class="form-label"></label>
+            <input type="password" class="form-control" id="pwd_supplier" placeholder="Password" name="pwd_supplier" >
+            <!--  <span class="inactive">Ingrese un valor valido.</span> -->
           </div>
 
        <center>
