--- a/views/modules/sign-up-customer-form.html
+++ b/views/modules/sign-up-customer-form.html
@@ -79,7 +79,7 @@
           <span class="inactive">Seleccione un tipo de archivo correcto.</span>
         </label>
 
-        <button type="button" id="customerFormButton">Registrase</button>
+        <button type="button" id="customer-form-button">Registrase</button>
       </form>
     </div>
   </section>
