refactor(app): Refactor header styles

--- a/views/assets/css/normalize.css
+++ b/views/assets/css/normalize.css
@@ -3,6 +3,16 @@
 /* Document
    ========================================================================== */
 
+/* MY STYLES */
+* {
+  box-sizing: border-box;
+}
+
+p,
+figure {
+  margin: 0;
+}
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
