--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -9,6 +9,79 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+/* header */
+header {
+  position: sticky;
+  border-bottom: 1px solid var(--primary);
+}
+
+header>div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+}
+
+.hamburguer-menu {
+  width: 24px;
+  height: 24px;
+  border: none;
+  outline: none;
+  background-image: url('../svg/hamburguer-menu.svg');
+  background-repeat: no-repeat;
+  background-size: 24px;
+  background-position: center;
+  cursor: pointer;
+}
+
+.search-bar {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: var(--primary);
+  box-shadow: 0px 0px 5px 2px #5e57e0;
+}
+
+.search-bar input {
+  width: calc(100% - 30px);
+  height: 100%;
+  border: none;
+  border-radius: 20px;
+  background-color: transparent;
+  outline: none;
+  text-indent: 16px;
+  color: var(--white);
+}
+
+.search-bar input::placeholder {
+  color: var(--white);
+}
+
+.search-bar button {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 50%;
+  background-image: url('../svg/search.svg');
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  background-position: center;
+  outline: none;
+  cursor: pointer;
+}
+
 /* styles titles */
 .primary {
   text-shadow: 0 2px 10px var(--primary);
@@ -67,14 +140,6 @@ html {
   margin: 0.5rem 0;
   color: var(--secondary);
 }
-
-/* .sign-up__form__input span {
-  position: absolute;
-  top: 50%;
-  left: 1rem;
-  transform: translateY(-50%);
-  color: var(--secondary);
-} */
 
 input {
   margin-bottom: 0.5rem;
