--- a/views/modules/header.html
+++ b/views/modules/header.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
+  <title>Document</title>
 </head>
 
 <body>
+  <header>
+    <div>
+      <div class="logo">
+        <img src="../assets/svg/logo.svg" alt="Logo Dreamy Event">
+      </div>
 
+      <form action="./search.html" class="search-bar">
+        <input type="text" name="search" id="search" placeholder="Buscar">
+        <button type="submit"></button>
+      </form>
 
-    <nav class="navBar">
-        <div class="navBarSearch">
-            <input type="text" name="search" id="search" placeholder="Buscar">
-            <button></button>
-        </div>
-    </nav>
-
-
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, libero voluptatem ducimus voluptatibus qui quos fugit voluptate perferendis aperiam neque unde quasi. Commodi est provident fugit aut placeat sit necessitatibus.</p>
-
-
-
-    <section>
-    </section>
-
-
-
-
-
-    
-
+      <nav class="nav-bar">
+        <button type="button" class="hamburguer-menu"></button>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
