Refactor(app): Refactor forms styles

--- a/views/modules/log-in-form.html
+++ b/views/modules/log-in-form.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel="stylesheet" href="../assets/css/main.css">
-  <title>Log in </title>
+  <title>Document</title>
 </head>
+
 <body>
-  <section class="log-in">
+  <section class="form-section">
 
-    <div class="log-in__container">
-      <h2>Bienvenido a</h2>
-      <h2 class="tittle-welcome">Dreamy Event</h2>
-  
+    <div class="form__container">
+      <h2>Bienvenido a <span class="primary">Dreamy Event</span></h2>
+
       <div class="square"></div>
-  
-      <form class="log-in__form" id="customerForm">
-        
-        <label for="customer-email" class="log-in__form__input">
-          <!-- <span>Email:</span>  -->
-          <input id="customer-email" type="email" name="customer-email" placeholder="Email:" onkeyup="validateInputData('customer-email')">
-          <span class="inactive">Ingrese un valor valido.</span>
-        </label>
-        
-        <label for="customer-pass" class="log-in__form__input">
-          <!-- <span>Password:</span> -->
-          <input id="customer-pass" type="password" name="customer-pass" placeholder="Password:" onkeyup="validateInputData('customer-pass')">
-          <span class="inactive">Ingrese un valor valido.</span>
-        </label>
-        
 
-        <button type="button" id="customerFormButton">Ingresar</button>
+      <form class="form" id="form">
+        <label for="email" class="form__input">
+          <!-- <span>Email:</span>  -->
+          <input id="email" type="email" name="email" placeholder="Email"
+            onkeyup="validateInputData('email')">
+          <span class="inactive">Ingrese un valor valido.</span>
+        </label>
+
+        <!-- password -->
+        <label for="pass" class="form__input">
+          <!-- <span>Password:</span> -->
+          <input id="pass" type="password" name="pass" placeholder="Password"
+            onkeyup="validateInputData('pass')">
+          <span class="inactive">Ingrese un valor valido.</span>
+        </label>
+
+        <button type="button" id="form-button">Registrase</button>
       </form>
     </div>
   </section>
   <script src="../assets/js/main.js"></script>
 </body>
+
 </html>
