--- a/views/modules/sign-up-customer-form.html
+++ b/views/modules/sign-up-customer-form.html
@@ -10,76 +10,76 @@
 </head>
 
 <body>
-  <section class="sign-up">
+  <section class="form-section">
 
-    <div class="sign-up__container">
+    <div class="form__container">
       <h2>Registrase</h2>
 
       <div class="square"></div>
 
-      <form class="sign-up__form" id="customerForm">
-        <label for="customer-name" class="sign-up__form__input">
+      <form class="form" id="form">
+        <label for="name" class="form__input">
           <!-- <span>Nombre:</span> -->
-          <input id="customer-name" type="text" name="customer-name" placeholder="Nombre"
-            onkeyup="validateInputData('customer-name')">
+          <input id="name" type="text" name="name" placeholder="Nombre"
+            onkeyup="validateInputData('name')">
           <!-- mensaje de error -->
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
-        <label for="customer-last-name" class="sign-up__form__input">
+        <label for="last-name" class="form__input">
           <!-- <span>Last name:</span> -->
-          <input id="customer-last-name" type="text" name="customer-last-name" placeholder="Last name"
-            onkeyup="validateInputData('customer-last-name')">
+          <input id="last-name" type="text" name="last-name" placeholder="Last name"
+            onkeyup="validateInputData('last-name')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
-        <label for="customer-email" class="sign-up__form__input">
+        <label for="email" class="form__input">
           <!-- <span>Email:</span>  -->
-          <input id="customer-email" type="email" name="customer-email" placeholder="Email"
-            onkeyup="validateInputData('customer-email')">
+          <input id="email" type="email" name="email" placeholder="Email"
+            onkeyup="validateInputData('email')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
-        <label for="customer-phone" class="sign-up__form__input">
+        <label for="phone" class="form__input">
           <!-- <span>Telefono:</span>  -->
-          <input id="customer-phone" type="number" name="customer-phone" placeholder="Telefono"
-            onkeyup="validateInputData('customer-phone')">
+          <input id="phone" type="number" name="phone" placeholder="Telefono"
+            onkeyup="validateInputData('phone')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- city -->
-        <label for="customer-city" class="sign-up__form__input">
+        <label for="city" class="form__input">
           <!-- <span>Ciudad:</span>  -->
-          <input id="customer-city" type="text" name="customer-city" placeholder="Ciudad"
-            onkeyup="validateInputData('customer-city')">
+          <input id="city" type="text" name="city" placeholder="Ciudad"
+            onkeyup="validateInputData('city')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- country -->
-        <label for="customer-country" class="sign-up__form__input">
+        <label for="country" class="form__input">
           <!-- <span>Pais:</span>  -->
-          <input id="customer-country" type="text" name="customer-country" placeholder="Pais"
-            onkeyup="validateInputData('customer-country')">
+          <input id="country" type="text" name="country" placeholder="Pais"
+            onkeyup="validateInputData('country')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- password -->
-        <label for="customer-pass" class="sign-up__form__input">
+        <label for="pass" class="form__input">
           <!-- <span>Password:</span> -->
-          <input id="customer-pass" type="password" name="customer-pass" placeholder="Password"
-            onkeyup="validateInputData('customer-pass')">
+          <input id="pass" type="password" name="pass" placeholder="Password"
+            onkeyup="validateInputData('pass')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- img -->
-        <label for="customer-img" class="sign-up__form__input">
+        <label for="img" class="form__input">
           Foto de perfil:
-          <input id="customer-img" type="file" name="customer-img" placeholder="Imagen"
-            onchange="validateInputData('customer-img')" accept="image/*">
+          <input id="img" type="file" name="img" placeholder="Imagen"
+            onchange="validateInputData('img')" accept="image/*">
           <span class="inactive">Seleccione un tipo de archivo correcto.</span>
         </label>
 
-        <button type="button" id="customer-form-button">Registrase</button>
+        <button type="button" id="form-button">Registrase</button>
       </form>
     </div>
   </section>
