Refactor(app): Refactor validate form

--- a/views/modules/log-in-form.html
+++ b/views/modules/log-in-form.html
@@ -33,7 +33,7 @@
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
-        <button type="button" id="form-button">Registrase</button>
+        <button type="button" id="log-in-form-button">Entrar</button>
       </form>
     </div>
   </section>
