--- a/views/modules/sign-up-customer-form.html
+++ b/views/modules/sign-up-customer-form.html
@@ -20,8 +20,7 @@
       <form class="form" id="form">
         <label for="name" class="form__input">
           <!-- <span>Nombre:</span> -->
-          <input id="name" type="text" name="name" placeholder="Nombre"
-            onkeyup="validateInputData('name')">
+          <input id="name" type="text" name="name" placeholder="Nombre" onkeyup="validateInputData('name')">
           <!-- mensaje de error -->
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
@@ -35,47 +34,42 @@
 
         <label for="email" class="form__input">
           <!-- <span>Email:</span>  -->
-          <input id="email" type="email" name="email" placeholder="Email"
-            onkeyup="validateInputData('email')">
+          <input id="email" type="email" name="email" placeholder="Email" onkeyup="validateInputData('email')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <label for="phone" class="form__input">
           <!-- <span>Telefono:</span>  -->
-          <input id="phone" type="number" name="phone" placeholder="Telefono"
-            onkeyup="validateInputData('phone')">
+          <input id="phone" type="number" name="phone" placeholder="Telefono" onkeyup="validateInputData('phone')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- city -->
         <label for="city" class="form__input">
           <!-- <span>Ciudad:</span>  -->
-          <input id="city" type="text" name="city" placeholder="Ciudad"
-            onkeyup="validateInputData('city')">
+          <input id="city" type="text" name="city" placeholder="Ciudad" onkeyup="validateInputData('city')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- country -->
         <label for="country" class="form__input">
           <!-- <span>Pais:</span>  -->
-          <input id="country" type="text" name="country" placeholder="Pais"
-            onkeyup="validateInputData('country')">
+          <input id="country" type="text" name="country" placeholder="Pais" onkeyup="validateInputData('country')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- password -->
         <label for="pass" class="form__input">
           <!-- <span>Password:</span> -->
-          <input id="pass" type="password" name="pass" placeholder="Password"
-            onkeyup="validateInputData('pass')">
+          <input id="pass" type="password" name="pass" placeholder="Password" onkeyup="validateInputData('pass')">
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- img -->
         <label for="img" class="form__input">
           Foto de perfil:
-          <input id="img" type="file" name="img" placeholder="Imagen"
-            onchange="validateInputData('img')" accept="image/*">
+          <input id="img" type="file" name="img" placeholder="Imagen" onchange="validateInputData('img')"
+            accept="image/*">
           <span class="inactive">Seleccione un tipo de archivo correcto.</span>
         </label>
 
@@ -83,7 +77,12 @@
       </form>
     </div>
   </section>
+
   <script src="../assets/js/main.js"></script>
+  <script>
+    const formButton = document.getElementById('form-button');
+    formButton.addEventListener('click', createUser('customer'));
+  </script>
 </body>
 
 </html>
