--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -215,3 +215,40 @@ input:invalid:focus {
 .inactive {
   display: none;
 }
+
+/* info Service */ /* info Service */ /* info Service */ /* info Service */ /* info Service */
+
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
+  border-radius: 10px;
+}
+
+
+.image {
+  width: 25%;
+  background-size: cover;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col {
+  width: 50%;
+  margin: 10px;
+}
