refactor(app): Refactor the form validation event listener

--- a/views/modules/log-in-form.html
+++ b/views/modules/log-in-form.html
@@ -33,11 +33,16 @@
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
-        <button type="button" id="log-in-form-button">Entrar</button>
+        <button type="button" id="form-button">Entrar</button>
       </form>
     </div>
   </section>
+
   <script src="../assets/js/main.js"></script>
+  <script>
+    const loginFormButton = document.getElementById('form-button');
+      // loginFormButton.addEventListener('click', () => method());
+  </script>
 </body>
 
 </html>
