--- a/views/modules/sign-up-customer-form.html
+++ b/views/modules/sign-up-customer-form.html
@@ -80,8 +80,8 @@
 
   <script src="../assets/js/main.js"></script>
   <script>
-    const formButton = document.getElementById('form-button');
-    formButton.addEventListener('click', createUser('customer'));
+    const customerFormButton = document.getElementById('form-button');
+    customerFormButton.addEventListener('click', () => createUser('customer'));
   </script>
 </body>
 
