--- a/views/modules/sign-up-supplier-form.html
+++ b/views/modules/sign-up-supplier-form.html
@@ -77,11 +77,10 @@
   </section>
 
   <script src="../assets/js/main.js"></script>
-  <script src="../assets/js/supplier.js"></script>
-  <!-- <script>
-    const supplierFormButton = document.getElementById('supplier-form-button');
-    supplierFormButton.addEventListener('click', createUser('supplier'));
-  </script> -->
+  <script>
+    const supplierFormButton = document.getElementById('form-button');
+    supplierFormButton.addEventListener('click', () => createUser('supplier'));
+  </script>
 </body>
 
 </html>
