--- a/views/modules/list-of-services.html
+++ b/views/modules/list-of-services.html
@@ -2,58 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Tarjetas</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
+  <title>Tarjetas</title>
 </head>
 
 <body>
-    <div class="card__container">
-        <div class="card">
+  <section class="cards-container">
+    <a href="#" class="card">
+      <img src="../assets/img/img1.png" alt="Imagen 1">
+      <div class="card__title">
+        <h2>Salón</h2>
+        <span>★4.5</span>
+      </div>
+      <div class="card__content">
+        <h3 class="">Ubicación: Duitama</h3>
+        <h3 class="">$400.000</h3>
+      </div>
+    </a>
 
-            <img src="../assets/img/img1.png" alt="Imagen 1">
-            <div>
-                <h2>Salón <i class="fas fa-star">4.5</i> </h2>
-            </div>
-            <div>
-                <h3 class="ubication__card">Ubicación: Duitama</h3>
-            </div>
-            <h3 class="price__card">$400.000</h3>
-        </div>
+    <a href="#" class="card">
+      <img src="../assets/img/img2.png" alt="Imagen 2">
+      <div>
+        <h2>Salón <i class="fas fa-star" id="star__card">4.5</i> </h2>
+      </div>
+      <div>
+        <h3 class="ubication__card">Ubicación: Paipa</h3>
+      </div>
+      <h3 class="price__card">$400.000</h3>
+    </a>
 
-        <div class="card">
-
-            <img src="../assets/img/img2.png" alt="Imagen 2">
-            <div>
-                <h2>Salón <i class="fas fa-star" id="star__card">4.5</i> </h2>
-            </div>
-            <div>
-                <h3 class="ubication__card">Ubicación: Paipa</h3>
-            </div>
-            <h3 class="price__card">$400.000</h3>
-        </div>
-
-        <div class="card">
-
-            <img src="../assets/img/img3.png" alt="Imagen 3">
-            <div>
-                <h2>Salón <i class="fas fa-star" id="star__card">4.5</i> </h2>
-            </div>
-            <div>
-                <h3 class="ubication__card">Ubicación: Tunja</h3>
-            </div>
-            <h3 class="price__card">$400.000</h3>
-        </div>
-
-
-    </div>
+    <a href="#" class="card">
+      <img src="../assets/img/img3.png" alt="Imagen 3">
+      <div>
+        <h2>Salón <i class="fas fa-star" id="star__card">4.5</i> </h2>
+      </div>
+      <div>
+        <h3 class="ubication__card">Ubicación: Tunja</h3>
+      </div>
+      <h3 class="price__card">$400.000</h3>
+    </a>
 </body>
 
 </html>
-
-
-
-
-
