--- a/views/modules/list-of-services.html
+++ b/views/modules/list-of-services.html
@@ -13,36 +13,38 @@
   <section class="cards-container">
     <a href="#" class="card">
       <img src="../assets/img/img1.png" alt="Imagen 1">
-      <div class="card__title">
-        <h2>Salón</h2>
-        <span>★4.5</span>
-      </div>
       <div class="card__content">
-        <h3 class="">Ubicación: Duitama</h3>
-        <h3 class="">$400.000</h3>
+        <div class="card__title">
+          <h2>Salón</h2>
+          <span>★4.5</span>
+        </div>
+        <p class="">Ubicación: Duitama</p>
+        <p class="">$400.000</p>
       </div>
     </a>
 
     <a href="#" class="card">
-      <img src="../assets/img/img2.png" alt="Imagen 2">
-      <div>
-        <h2>Salón <i class="fas fa-star" id="star__card">4.5</i> </h2>
+      <img src="../assets/img/img2.jpeg" alt="Imagen 2">
+      <div class="card__content">
+        <div class="card__title">
+          <h2>Salón</h2>
+          <span>★4.5</span>
+        </div>
+        <p class="">Ubicación: Duitama</p>
+        <p class="">$400.000</p>
       </div>
-      <div>
-        <h3 class="ubication__card">Ubicación: Paipa</h3>
-      </div>
-      <h3 class="price__card">$400.000</h3>
     </a>
 
     <a href="#" class="card">
-      <img src="../assets/img/img3.png" alt="Imagen 3">
-      <div>
-        <h2>Salón <i class="fas fa-star" id="star__card">4.5</i> </h2>
+      <img src="../assets/img/img3.jpeg" alt="Imagen 2">
+      <div class="card__content">
+        <div class="card__title">
+          <h2>Salón</h2>
+          <span>★4.5</span>
+        </div>
+        <p class="">Ubicación: Duitama</p>
+        <p class="">$400.000</p>
       </div>
-      <div>
-        <h3 class="ubication__card">Ubicación: Tunja</h3>
-      </div>
-      <h3 class="price__card">$400.000</h3>
     </a>
 </body>
 
