Refactor(app): Refactor filter bar classes and initial structure

--- a/views/modules/search-filter-bar.html
+++ b/views/modules/search-filter-bar.html
@@ -1,77 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='filter.css'>
-    <script src='main.js'></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
+  <title>Document</title>
 </head>
 
 <body>
+  <header>
+    <div>
+      <div class="logo">
+        <img src="../assets/svg/logo.svg" alt="Logo Dreamy Event">
+      </div>
 
+      <form action="./search.html" class="search-bar">
+        <input type="text" name="search" id="search" placeholder="Buscar">
+        <button type="submit"></button>
+      </form>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem temporibus ut minus enim molestias
-        voluptates! Suscipit iure consectetur nesciunt itaque ex incidunt, maxime explicabo sit facere eius ratione ea?
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt odit molestias qui dolor sequi omnis
-        perspiciatis nobis voluptate labore, iusto, expedita ducimus laudantium dolorem dignissimos quidem, vero tempore
-        dolore?Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit distinctio id ratione laudantium fuga,
-        natus perspiciatis ex, reprehenderit suscipit soluta nostrum, cum eaque odit beatae quaerat magnam odio dolore
-        similique?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero quidem, incidunt alias culpa nesciunt
-        dolorum odit rerum iure et tempora debitis? Rem consequuntur omnis fugiat quae! Veniam rem nulla provident.lore
-    </p>
+      <nav class="nav-bar">
+        <button type="button" class="hamburguer-menu"></button>
+      </nav>
+    </div>
+  </header>
 
+  <main>
+    <section>
+      <ul class="filer-bar">
+        <li>
+          <a href="pagina1.html">
+            <img src="../assets/svg/places.svg" alt="Botón 1">
+            <span class="line"></span>
+            <span>Lugares</span>
+          </a>
+        </li>
 
+        <li>
+          <a href="pagina2.html">
+            <img src="../assets/svg/cake.svg" alt="Botón 2">
+            <span class="line"></span>
+            <span>Pasteleria</span>
+          </a>
+        </li>
 
-    <ul class="navbar">
-            <li>
-                <a href="pagina1.html">
-                    <img src="../assets/svg/places.svg" alt="Botón 1">
-                    <span class="line"></span>
-                    <span>lugares</span>
-                </a>
-            </li>
+        <li>
+          <a href="pagina3.html">
+            <img src="../assets/svg/logistic.svg" alt="Botón 3">
+            <span class="line"></span>
+            <span>Logistica</span>
+          </a>
+        </li>
 
-            <li>
-                <a href="pagina2.html">
-                    <img src="../assets/svg/cake.svg" alt="Botón 2">
-                    <span class="line"></span>
-                    <span>pasteleria</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="pagina3.html">
-                    <img src="../assets/svg/logistic.svg" alt="Botón 3">
-                    <span class="line"></span>
-                    <span>logistica</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="pagina4.html">
-                    <img src="../assets/svg/decor.svg" alt="Botón 4">
-                    <span class="line"></span>
-                    <span>decoracion</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="pagina5.html">
-                    <img src="boton5.png" alt="Botón 5">
-                    <span>Botón 5</span>
-                </a>
-            </li>
-    </ul>
-
-
-
-
-
-
+        <li>
+          <a href="pagina4.html">
+            <img src="../assets/svg/decor.svg" alt="Botón 4">
+            <span class="line"></span>
+            <span>Decoracion</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 
 </html>
