--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -138,7 +138,7 @@ header>div {
   flex-direction: column;
   width: 75%;
   margin: 0.5rem 0;
-  color: var(--secondary);
+  color: var(--secondary);<li><a href="pagina5.html"><img src="boton5.png" alt="Botón 5"><span>Botón 5</span></a></li>
 }
 
 input {
@@ -297,4 +297,54 @@ input:invalid:focus {
 .card p.price {
   color: #333;
   font-size: 24px;
+}
+
+/* Filter bar */
+.filer-bar {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--white);
+  overflow: scroll;
+}
+
+.filer-bar li {
+  display: inline-block;
+  margin: 0 0.5rem;
+}
+
+.filer-bar li:last-child {
+  margin-right: 0;
+}
+
+.filer-bar li img {
+  display: block;
+  margin: 0 auto;
+}
+
+.filer-bar li span {
+  display: block;
+  margin-top: 5px;
+  font-size: 14px;
+  text-align: center;
+  color: var(--black);
+}
+
+.filer-bar li .line {
+  display: block;
+  height: 4px;
+  background-color: var(--primary);
+  border-radius: 2px;
+}
+
+.filer-bar li a {
+  text-decoration: none;
+}
+
+@media (min-width: 768px) {
+  .filer-bar {
+    justify-content: space-evenly;
+    overflow: hidden;
+  }
+
 }
