--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -274,3 +274,38 @@ input:invalid:focus {
 .content p {
   font-size: 25px;
 }
+
+
+
+
+
+
+/* Flexbox testing */
+
+.flex-gallery{
+  padding: 10px;
+  display: flex;
+  background-color: pink;
+  justify-content: space-between;
+  height: 200px;
+
+}
+.boxE{
+ background-color: #7772E6;
+ display:block;
+  width:33%;
+
+}
+
+.one-pic2row{
+  width:33%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.one-pic2row div{
+  background-color: brown;
+  height: 50%;
+}
