--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -34,12 +34,41 @@
             <div>
                 <h2>NOMBRE DEL SERVICIO</h2>
                 <h3>Noruega</h3>
-                <p>Descripcion del servicio. Lorem ipsum dolor sit amet consectetur adipiscing elit gravida phasellus ad mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil sequi natus iste mollitia reiciendis odit nobis dolor tenetur veritatis tempore? Ex. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ad, dignissimos expedita ullam veritatis ipsa, iure delectus perferendis a odit excepturi. Quam perferendis minus ullam possimus nihil similique amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit impedit id, nesciunt autem.</p>
+                <p>Descripcion del servicio. Lorem ipsum dolor sit amet consectetur adipiscing elit gravida phasellus ad
+                    mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim
+                    laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil
+                    sequi natus iste mollitia reiciendis odit nobis dolor tenetur veritatis tempore? Ex. Lorem ipsum,
+                    dolor sit amet consectetur adipisicing elit. Itaque ad, dignissimos expedita ullam veritatis ipsa,
+                    iure delectus perferendis a odit excepturi. Quam perferendis minus ullam possimus nihil similique
+                    amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a
+                    dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit
+                    impedit id, nesciunt autem.</p>
 
             </div>
 
 
         </section>
+
+
+
+        <div class="flex-gallery">
+
+                <div class="boxE"> 1box </div>
+                <div class="boxE"> 2box </div>
+
+
+            <div class="one-pic2row">
+                <div> 1 row-box </div>
+                <div> 2 row-box </div>
+            </div>
+
+        </div>
+
+
+
+
 
 
 
